# genetic_figures

./: Cargo.toml  README.md
src/: .ellipse.rs.swp  THOUGHTS.txt  bezier.rs  ellipse.rs  figure.rs  ga.rs  img.rs  imgutil.rs  line.rs  main.rs  minimize.rs  rectangle.rs  scanline.rs  state.rs  util.rs
